bk_ida/gccida/g1/dump_maybe_newline
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dump_maybe_newline/src/tree-dump.c:626:24: error: use of undeclared identifier 'asc_6F7DF3'
fprintf( di_0->stream, asc_6F7DF3, 25LL, 6489631LL); 
                       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dump_maybe_newline/src/tree-dump.c:635:24: error: use of undeclared identifier 'off_6F7DF4'
fprintf( di_0->stream, off_6F7DF4, 15 - v2, 6489631LL); 
                       ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dump_maybe_newline/src/obj/tree-dump.o] Error 1
